--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,19 +11,21 @@
   <div class="row">
          <div class="col-md-6" align="right">
            <img class="img-thumbnail rounded border border-dark image-left"
-           src="{{url_for('static',filename='uploads/'+p)}}">
+           src="{{url_for('static',filename='uploads/'+picture)}}">
 
-           <h3 class="text-left">Your uploaded image</h3>
+           <h3 class="text-left">Your uploaded image: {{upload_size}}</h3>
           </div>
          <div class="col-md-6">
            <img class="img-thumbnail rounded border border-dark image-right"
-           src="{{url_for('static',filename='compressed_files/'+p)}}">
+           src="{{url_for('static',filename='compressed_files/'+picture)}}">
+           <h3 class="text-right">Your compressed image: {{compressed_size}}</h3>
+          </div>
 
-           <h3 class="text-center">
-              <a href="{{ url_for('home')}}"> Compress another image! </a>
-          </h3>
 
-         </div>
   </div>
-
+  <div class="jumbotron">
+   <h3 class="text-center">
+      <a href="{{ url_for('home')}}"> Compress another image! </a>
+  </h3>
+ </div>
 {% endblock content %}
