--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
                    {%endif%}
             </div>
             <div class="form-group">
-                   {{form.submit(class="btn btn-outline-info", onclick="$('#loading').show();")}}
+                   {{form.submit(class="btn btn-outline-info")}}
             </div>
 
   </div>
